Changes by Nandu

--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>                                            
-                                            <li><a href="about.html">About</a></li>                                          
+                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a></li>
                                             <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
@@ -68,22 +68,22 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li> -->
-                                              <!-- #### LogIn FormatMenu START #### -->
-                                     <li id="Username" class='invisible'></li>
-                                     <li id="Photo" class='invisible'>
-                                         <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                     </li>
-                                     <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                             onclick="login()">Login</a></li>
-                                     <li id="guidelogin" class='invisible'>
-                                         <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                             GuideLogin
-                                         </a>
-                                     </li>
-                                     <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                         <a id="btnLogout">Logout</a>
-                                     </li>
-                                     <!-- #### LogIn FormatMenu STOP #### -->
+                                            <!-- #### LogIn FormatMenu START #### -->
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'>
+                                                <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                                            </li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                                    onclick="login()">Login</a></li>
+                                            <li id="guidelogin" class='invisible'>
+                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                                    GuideLogin
+                                                </a>
+                                            </li>
+                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                                <a id="btnLogout">Logout</a>
+                                            </li>
+                                            <!-- #### LogIn FormatMenu STOP #### -->
                                             <!-- <input type="hidden" id="hdnUserType">
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
@@ -101,8 +101,8 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                     <!-- #### LogIn FormatMenu START #### -->
-                                     <!-- <li id="Username" class='invisible'></li>
+                                    <!-- #### LogIn FormatMenu START #### -->
+                                    <!-- <li id="Username" class='invisible'></li>
                                      <li id="Photo" class='invisible'>
                                          <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                      </li>
@@ -116,10 +116,11 @@
                                      <li id="liLogout" class='invisible' style='cursor:pointer'>
                                          <a id="btnLogout">Logout</a>
                                      </li> -->
-                                     <!-- #### LogIn FormatMenu STOP #### -->
+                                    <!-- #### LogIn FormatMenu STOP #### -->
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank"> <i class="fa fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank">
+                                                    <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -165,7 +166,15 @@
                             <div class="story_info">
                                 <div class="row">
                                     <div class="col-lg-9">
-                                        <p>The Tourist Guide is an advance system for improving performance of tourism in India by attracting more tourists with the help of easy and convenient facilities provided in our application. And helping local people to expand their businesses in their area with the help of our application</p>. <p>As we all know that India is a diverse country full of historical places and monuments which attract lot of tourists towards it. But most of the time the tourists are not happy with their tourism experience in India as they don’t have proper information regarding the places and about other information which are necessary.</p>
+                                        <p>The Tourist Guide is an advance system for improving performance of tourism
+                                            in India by attracting more tourists with the help of easy and convenient
+                                            facilities provided in our application. And helping local people to expand
+                                            their businesses in their area with the help of our application</p>. <p>As
+                                            we all know that India is a diverse country full of historical places and
+                                            monuments which attract lot of tourists towards it. But most of the time the
+                                            tourists are not happy with their tourism experience in India as they don’t
+                                            have proper information regarding the places and about other information
+                                            which are necessary.</p>
                                     </div>
                                 </div>
                             </div>
@@ -222,8 +231,11 @@
                     <div class="video_wrap text-center">
                         <h3>Enjoy Video</h3>
                         <div class="video_icon">
-                            <a class="popup-video video_play_button" 
-                              href=<iframe width="956" height="538" src="https://www.youtube.com/embed/35npVaFGHMY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+                            <a class="popup-video video_play_button" href=<iframe width="956" height="538"
+                                src="https://www.youtube.com/embed/35npVaFGHMY" title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                                 <i class="fa fa-play"></i>
                             </a>
                         </div>
@@ -449,8 +461,8 @@
                             <h3 class="footer_title">
                                 Company
                             </h3>
-                            <ul class="links">                                
-                                <li><a href="about.html">About</a></li>                                                                
+                            <ul class="links">
+                                <li><a href="about.html">About</a></li>
                             </ul>
                         </div>
                     </div>
@@ -460,14 +472,12 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Himachal</a></li>
-                                <li><a href="#">Manali</a></li>
-                                <li><a href="#">Assam</a></li>
-                                <li><a href="#">Shimla</a></li>
-                                <li><a href="#">Kerala</a></li>
-                                <li><a href="#">Kashmir</a></li>
-                                <li><a href="#">Dehradun</a></li>
-                                <li><a href="#">Goa</a></li>
+                                <li><a href="./destination_details.html?loc=Udaipur">Udaipur</a></li>
+                                <li><a href="./destination_details.html?loc=Delhi">Delhi</a></li>
+                                <li><a href="./destination_details.html?loc=Lonavala">Lonavala</a></li>
+                                <li><a href="./destination_details.html?loc=Pondichery">Pondicherry</a></li>
+                                <li><a href="./destination_details.html?loc=Rishikesh">Rishikesh</a></li>
+                                <li><a href="./destination_details.html?loc=Shimla">Shimla</a></li>
                             </ul>
                         </div>
                     </div>
@@ -477,7 +487,7 @@
                                 Instagram
                             </h3>
                             <div class="instagram_feed" id='instagram_feed2'>
-                            </div>                            
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -546,7 +556,7 @@
     <script src="js/main.js"></script>
     <script>
 
-   
+
         $('#datepicker').datepicker({
             iconsLibrary: 'fontawesome',
             icons: {
@@ -590,6 +600,27 @@
     </style>
     <script src="js/indexMain.js"></script>
 
+    <script src="js/jquery.instagramFeed.min.js"></script>
+    <script id="loadInstagram">
+        $(() => {
+            $.instagramFeed({
+                'username': 'touristguide2021',
+                'container': "#instagram_feed2",
+                'display_profile': false,
+                'display_biography': false,
+                'display_gallery': true,
+                'display_captions': false,
+                'max_tries': 10,
+                'callback': null,
+                'styling': true,
+                'items': 6,
+                'items_per_row': 3,
+                'margin': 1,
+                'lazy_load': false,
+                'on_error': console.error
+            });
+        });
+    </script>
 </body>
 
 </html>
