--- a/index.html
+++ b/index.html
@@ -969,14 +969,12 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Himachal</a></li>
-                                <li><a href="#">Manali</a></li>
-                                <li><a href="#">Assam</a></li>
-                                <li><a href="#">Shimla</a></li>
-                                <li><a href="#">Kerala</a></li>
-                                <li><a href="#">Kashmir</a></li>
-                                <li><a href="#">Dehradun</a></li>
-                                <li><a href="#">Goa</a></li>
+                                <li><a href="./destination_details.html?loc=Udaipur">Udaipur</a></li>
+                                <li><a href="./destination_details.html?loc=Delhi">Delhi</a></li>
+                                <li><a href="./destination_details.html?loc=Lonavala">Lonavala</a></li>
+                                <li><a href="./destination_details.html?loc=Pondichery">Pondicherry</a></li>
+                                <li><a href="./destination_details.html?loc=Rishikesh">Rishikesh</a></li>
+                                <li><a href="./destination_details.html?loc=Shimla">Shimla</a></li>
                             </ul>
                         </div>
                     </div>
