--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a></li>
+                                            <li><a href="ViewMyBookings.html">MyBookings</a></li>
                                             <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -125,13 +126,36 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="seach_icon">
+                            <!-- <div class="seach_icon">
                                 <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div>
+                            </div> -->
                             <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
+                                <nav class="navbar navbar-expand-md bg-dark navbar-dark invisible" id='navMobileNav'>
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <a class="navbar-brand" href="#">
+                                                <img data-cfsrc="img/TouristLogo.png" alt=""
+                                                    src="http://localhost/travelo/img/TouristLogo.png">
+                                            </a>
+                                        </div>
+                                        <div class="col-4">
+                                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                                data-target="#collapsibleNavbar">
+                                                <span class="navbar-toggler-icon"></span>
+                                            </button>
+
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                                                <ul class="navbar-nav" id='ulMobileNav'>
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </nav>
                             </div>
                         </div>
                     </div>
