--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                                             <li class="nav-item">
                                                 <a class="nav-link" href="travel_destination.html">Destination</a>
                                             </li>
+                                            <li><a href="ViewMyBookings.html">MyBookings</a></li>
                                             <li class="nav-item"><a class="nav-link"
                                                     href="Emergency.html">EmergencyService</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
