--- a/destination_details.html
+++ b/destination_details.html
@@ -117,11 +117,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="seach_icon">
+                            <!-- <div class="seach_icon">
                                 <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div>
+                            </div> -->
                             <div class="col-12">
                                 <div class="mobile_menu d-block d-lg-none"></div>
                             </div>
@@ -410,14 +410,12 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Himachal</a></li>
-                                <li><a href="#">Manali</a></li>
-                                <li><a href="#">Assam</a></li>
-                                <li><a href="#">Shimla</a></li>
-                                <li><a href="#">Kerala</a></li>
-                                <li><a href="#">Kashmir</a></li>
-                                <li><a href="#">Dehradun</a></li>
-                                <li><a href="#">Goa</a></li>
+                                <li><a href="./destination_details.html?loc=Udaipur">Udaipur</a></li>
+                                <li><a href="./destination_details.html?loc=Delhi">Delhi</a></li>
+                                <li><a href="./destination_details.html?loc=Lonavala">Lonavala</a></li>
+                                <li><a href="./destination_details.html?loc=Pondichery">Pondicherry</a></li>
+                                <li><a href="./destination_details.html?loc=Rishikesh">Rishikesh</a></li>
+                                <li><a href="./destination_details.html?loc=Shimla">Shimla</a></li>
                             </ul>
                         </div>
                     </div>
@@ -426,49 +424,7 @@
                             <h3 class="footer_title">
                                 Instagram
                             </h3>
-                            <div class="instagram_feed">
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/1.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/1.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/2.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/2.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/3.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/3.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/4.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/4.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/5.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/5.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/6.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/6.png" alt></noscript>
-                                    </a>
-                                </div>
+                            <div class="instagram_feed" id='instagram_feed2'>      
                             </div>
                         </div>
                     </div>
@@ -569,6 +525,27 @@
     <script src="js/Destination.js"></script>
     <script src="js/travelDetails.js"></script>
     <script src='js/indexMain.js'></script>
+    <script src="js/jquery.instagramFeed.min.js"></script>
+    <script id="loadInstagram">
+        $(() => {
+            $.instagramFeed({
+                'username': 'touristguide2021',
+                'container': "#instagram_feed2",
+                'display_profile': false,
+                'display_biography': false,
+                'display_gallery': true,
+                'display_captions': false,
+                'max_tries': 10,
+                'callback': null,
+                'styling': true,
+                'items': 6,
+                'items_per_row': 3,
+                'margin': 1,
+                'lazy_load': false,
+                'on_error': console.error
+            });
+        });
+    </script>
 </body>
 
 </html>
