--- a/destination_details.html
+++ b/destination_details.html
@@ -211,7 +211,7 @@
         </div>
     </div>
 
-    <div class="newletter_area overlay">
+    <!-- <div class="newletter_area overlay">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-10">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- <div class="popular_places_area">
