Resolved GuideLogin Redirect issue

--- a/index.html
+++ b/index.html
@@ -986,6 +986,7 @@
                                 <li><a href="./destination_details.html?loc=Pondichery">Pondicherry</a></li>
                                 <li><a href="./destination_details.html?loc=Rishikesh">Rishikesh</a></li>
                                 <li><a href="./destination_details.html?loc=Shimla">Shimla</a></li>
+                                <a href='GuideDetails.html' id='aTagRedirect'></a>
                             </ul>
                         </div>
                     </div>
