--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
                                     <div class="row">
                                         <div class="col-8">
                                             <a class="navbar-brand" href="#">
-                                                <img data-cfsrc="img/TouristLogo.png" alt=""
-                                                    src="http://localhost/travelo/img/TouristLogo.png">
+                                                <img data-cfsrc="img/TouristLogo.png" alt="" src="img/TouristLogo.png">
                                             </a>
                                         </div>
                                         <div class="col-4">
@@ -741,7 +740,7 @@
                     <div class="video_wrap text-center">
                         <h3>Enjoy Video</h3>
                         <div class="video_icon">
-                            <a class="popup-video video_play_button" href="https://www.youtube.com/watch?v=f59dDEk57i0">
+                            <a class="popup-video video_play_button" href="https://youtu.be/35npVaFGHMY">
                                 <i class="fa fa-play"></i>
                             </a>
                         </div>
@@ -986,7 +985,7 @@
                                 <li><a href="./destination_details.html?loc=Pondichery">Pondicherry</a></li>
                                 <li><a href="./destination_details.html?loc=Rishikesh">Rishikesh</a></li>
                                 <li><a href="./destination_details.html?loc=Shimla">Shimla</a></li>
-                                <a href='GuideDetails.html' id='aTagRedirect'></a>
+                                <a href='./GuideDetails.html' id='aTagRedirect'></a>
                             </ul>
                         </div>
                     </div>
